--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,12 +10,14 @@ website:
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+      - Resume
+      - Cover Letter
+      - href: file:///media/fuse/crostini_422092f74f3af7485c5dfb143ac1b8fb3dfed416_termina_penguin/Stat%20349/Portfolio/docs/Cover%20Letter/index.pdf
 format:
   html:
     theme:
       - cosmo
       - brand
     css: styles.css
-
 editor: visual
 
