--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
       - icon: twitter
         href: https://twitter.com
       - text: Resume
-      - href: https://nathan-swenson.github.io/Portfolio/posts/Resume/Resume/Resume.pdf
+        href: https://nathan-swenson.github.io/Portfolio/posts/Resume/Resume/Resume.pdf
       - text: Cover Letter
         href: https://nathan-swenson.github.io/Portfolio/posts/Cover%20Letter/index.pdf
 format:
