--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
       - icon: twitter
         href: https://twitter.com
       - text: Resume
-        href: /docs/Resume/Resume/Resume.pdf
+        href: /Resume/Resume/Resume.pdf
       - text: Cover Letter
         href: /docs/Cover_Letter/index.pdf
 format:
